--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "SAIGEgds"]
+	path = SAIGEgds
+	url = https://github.com/abbvie-computationalgenomics/saigegds
+	shallow = true
+	registered = true
